--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,35 @@
-
 # FVM Version Cache
 .fvm/
+
+# Flutter/Dart/Pub related
+.dart_tool/
+.packages
+.pub-cache/
+build/
+# iOS
+ios/Flutter/Flutter.framework
+ios/Flutter/Flutter.podspec
+ios/Flutter/Generated.xcconfig
+ios/Pods/
+ios/Runner.xcworkspace/
+ios/DerivedData/
+# Android
+android/.gradle/
+android/captures/
+android/gradle/
+android/local.properties
+# VSCode
+.vscode/
+# macOS
+macos/Flutter/ephemeral/
+macos/Flutter/GeneratedPluginRegistrant.swift
+macos/build/
+# Web
+web/.dart_tool/
+web/build/
+# その他
+*.iml
+*.log
+*.tmp
+*.swp
+*.lock
