--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.1.5
   geolocator: ^14.0.0
+  photo_manager: ^3.7.1
 
 dev_dependencies:
   flutter_test:
