--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path_provider: ^2.1.5
   geolocator: ^14.0.0
   photo_manager: ^3.7.1
+  permission_handler: ^12.0.0+1
 
 dev_dependencies:
   flutter_test:
