--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   geolocator: ^14.0.0
   photo_manager: ^3.7.1
   permission_handler: ^12.0.0+1
+  http: ^1.1.0
+  connectivity_plus: ^5.0.1
+  intl: ^0.18.1
+  flutter_dotenv: ^5.1.0
+  image: ^4.1.7
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +73,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/
+    - assets/models/
+    - .env
     - assets/models/mobilenet_v2_1.0_224_quant.tflite
     - assets/models/labels.txt
 
