--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,10 +44,11 @@ dependencies:
   permission_handler: ^12.0.0+1
   http: ^1.1.0
   connectivity_plus: ^5.0.1
-  intl: ^0.18.1
+  intl: ^0.20.0
   flutter_dotenv: ^5.1.0
   image: ^4.1.7
   uuid: ^4.5.1
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
