--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   image: ^4.1.7
   uuid: ^4.5.1
   table_calendar: ^3.1.2
+  shared_preferences: ^2.3.2
+  package_info_plus: ^8.0.3
 
 dev_dependencies:
   flutter_test:
