--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -20,6 +20,9 @@ analyzer:
     prefer_const_declarations: ignore  # Use const for declarations when possible
     avoid_redundant_argument_values: ignore  # Style preference, not error
     unintended_html_in_doc_comment: ignore  # Documentation formatting, not functional issue
+    # Migration-related suppressions
+    deprecated_member_use: info  # Show as info instead of warning during migration
+    deprecated_member_use_from_same_package: ignore  # Ignore deprecation warnings within the same package
 
 linter:
   # The lint rules applied to this project can be customized in the
