--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   # Instagram共有機能用パッケージ
   share_plus: ^11.1.0
   image: ^4.5.4
+  characters: ^1.3.0
 
 dev_dependencies:
   flutter_test:
