--- a/l10n.yaml
+++ b/l10n.yaml
@@ -2,5 +2,6 @@ arb-dir: lib/l10n
 template-arb-file: app_ja.arb
 output-localization-file: app_localizations.dart
 output-class: AppLocalizations
+output-dir: lib/l10n/generated
 synthetic-package: false
 nullable-getter: false
